Fixes wrapping on player stats page
[finishes #68772982]

--- a/app/assets/stylesheets/player_statistics.css.scss
+++ b/app/assets/stylesheets/player_statistics.css.scss
@@ -3,6 +3,10 @@
   width: 50%;
   margin: 0 auto;
 
+  .definition-wrapper {
+    display: inline-block;
+  }
+
   dt {
     margin: 15px 0;
   }
